# VSCMM-Datos2

./: .gitignore  README.md
Prueba/: CMakeLists.txt  (+4 more)
VSC_Executable/: CMakeLists.txt
VSC_Executable/src/: GBCollector.cpp  GBCollector.h  HashTable.h  LinkedList.h  Set.cpp  Set.h  VSPointer.h  mainVSPtr.cpp  server.c++  server.h++
VSC_SharedLibrary/: CMakeLists.txt
VSC_SharedLibrary/html/: _g_b_collector_8h_source.html  _hash_table_8h_source.html  _linked_list_8h_source.html  _set_8h_source.html  _v_s_pointer_8h_source.html  annotated.html  annotated_dup.js  class_g_b_collector-members.html  class_g_b_collector.html  class_g_b_collector.js  class_g_b_collector__coll__graph.md5  class_hash_table-members.html  class_hash_table.html  class_hash_table.js  class_hash_table__coll__graph.md5  class_hash_table__inherit__graph.md5  class_linked_list-members.html  class_linked_list.html  class_linked_list.js  class_set-members.html  class_set.html  class_set.js  class_set__coll__graph.md5  class_v_s_pointer-members.html  class_v_s_pointer.html  class_v_s_pointer.js  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1basic__json.js  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__reader.js  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1binary__writer.js  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  (+495 more)
(+625 files in other folders)
